--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,8 @@
     "dayjs": "^1.11.13",
     "mui-file-input": "^6.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
