--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "npm install --prefix ./FrontEnd && npm run build --prefix ./FrontEnd && npm install"
+    "build": "npm install --prefix ./FrontEnd && npm run build --prefix ./FrontEnd && npm install",
+    "productSeed": "node ./src/utils/Products/productSeeding.js"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +18,10 @@
     "cloudinary": "^1.21.0",
     "cloudinary-build-url": "^0.2.4",
     "cors": "^2.8.5",
+    "csv-parser": "^3.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
     "multer": "^1.4.5-lts.1",
