--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "mui-file-input": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "swiper": "^11.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
