--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.2.1",
     "@mui/x-date-pickers": "^7.23.3",
     "dayjs": "^1.11.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "mui-file-input": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
