--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,8 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" },
-    { "src": "src/**/*", "use": "vercel/static" }
+    {
+      "src": "*.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
     {
