--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
-
+  "builds": [
+    {
+      "src": "*.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
       "dest": "/"
     }
-  ],
-  "functions": {
-    "api/routes/*.js": {
-      "maxDuration": 60
-    }
-  }
+  ]
 }
