--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "mui-file-input": "^6.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-export-table-to-excel": "^1.0.6",
+    "react-export-table-to-excel-xlsx": "^1.0.1",
     "react-hook-form": "^7.54.2",
     "react-scroll": "^1.9.0",
     "swiper": "^11.2.0"
